# GF_2o

./: .gitignore  README.md  pyproject.toml
.chainlit/: config.toml
src/ai_companion/: settings.py
src/ai_companion/core/: exceptions.py
src/ai_companion/graph/: edges.py  graph.py  nodes.py  state.py
src/ai_companion/graph/utils/: chains.py
src/ai_companion/interfaces/chainlit/: app.py
src/ai_companion/interfaces/whatsapp/: whatsapp_response.py
src/ai_companion/modules/image/: image_to_text.py  text_to_image.py
src/ai_companion/modules/memory/long_term/: memory_manager.py  vector_store.py
src/ai_companion/modules/schedules/: context_generation.py
src/ai_companion/modules/speech/: speech_to_text.py  text_to_speech.py
