[project]
name = "gf-2o"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.9.3",
    "elevenlabs>=2.26.1",
    "groq>=0.37.1",
    "langchain>=1.1.3",
    "langchain-core>=1.2.0",
    "langchain-groq>=1.1.1",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-sqlite>=3.0.1",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.0",
    "together>=1.5.32",
]
